--- a/README
+++ b/README
@@ -1,1 +1,2 @@
-This file was created by IntelliJ IDEA 12.1.6 for binding GitHub repository
+Load test of relations of Wikipedia pages (without content) using OrientDB.
+This project is base on https://code.google.com/p/graphdb-load-tester.
