Project description was changed.

--- a/README
+++ b/README
@@ -1,2 +1,2 @@
 Load test of relations of Wikipedia pages (without content) using OrientDB.
-This project is base on https://code.google.com/p/graphdb-load-tester.
+This project is base on https://code.google.com/p/graphdb-load-tester
